--- a/coach-app/package.json
+++ b/coach-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coach-app",
-  "homepage": "https://CsikiAkemi.github.io/coach-app",
+  "homepage": "https://csikiakemi.github.io/CoachApp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
